Fixed group-links overflow

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -278,7 +278,7 @@ main {
 
 			& .group-links {
 				height: 100%;
-				min-height: min-content;
+				/* min-height: min-content; */
 				padding: 0.5rem;
 				padding-top: 0.25rem;
 				
@@ -607,16 +607,12 @@ footer {
 	}
 }
 
-/* hide scrollbar */
-* {
-	/* Hide scrollbar for Chrome, Safari and Opera */
+/* * {
 	*::-webkit-scrollbar {
 		display: none;
 	}
-
-	/* Hide scrollbar for IE, Edge and Firefox */
 	* {
-		-ms-overflow-style: none; /* IE and Edge */
-		scrollbar-width: none; /* Firefox */
+		-ms-overflow-style: none;
+		scrollbar-width: none;
 	}
-}
+} */
